# Amamoto

./: .gitignore  ARCHITECTURE_VALIDATION.md  CMakeLists.txt  DEVELOPMENT_ROADMAP.md  ECS_ARCHITECTURE.md  ENHANCED_FEATURES_GUIDE.md  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  POC_README.md  README-UPDATED.md  README-WASM-UPDATE.md  README.md  WASM_MIGRATION_GUIDE.md  WASM_MIGRATION_STATUS.md  WASM_TEST_PLAN.md  build-wasm-ecs.bat  build-wasm-ecs.sh  build-wasm-simple.bat  build-wasm-simple.sh  package-lock.json  package.json  setup-wasm-build.bat  setup-wasm-build.sh
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.md
docs/: PROJECT_PLAN.md
src/simulation/: README.md  TrafficSimulation.cpp  TrafficSimulation.h  simulation.cpp  simulation.h  wasm_bindings.cpp  wasm_module.cpp
src/simulation/core/: Components.h  Entity.cpp  Entity.h  RoadNetwork.cpp  RoadNetwork.h
src/simulation/wasm/: CMakeLists.txt  SimpleTrafficSimulation.cpp  SimpleTrafficSimulation.h  WasmComponents.h  WasmECS.cpp  WasmECS.h  WasmRoadNetwork.cpp  WasmRoadNetwork.h  WasmTrafficSimulation.cpp  WasmTrafficSimulation.h  wasm_bindings_ecs.cpp  wasm_bindings_simple.cpp
src/web/public/: index.html  js-simulation.js  mvp.html  road-editor.js  road-network.js  simulation-worker.js  simulation.js  traffic-integration.js  wasm-ecs-integration.js  wasm-integration.js  webgl-renderer.js  worker-utils.js
